chore: upgrade version 0.0.5 and dependencies to latest

--- a/src/mixins/padding.scss
+++ b/src/mixins/padding.scss
@@ -1,8 +1,19 @@
 @mixin pad-vert($val, $important: false) {
-  padding-top: $val    #{if($important, ' !important', '')};
-  padding-bottom: $val #{if($important, ' !important', '')};
+  $suffix: "";
+  @if $important {
+    $suffix: " !important";
+  }
+
+  padding-top: #{$val}#{$suffix};
+  padding-bottom: #{$val}#{$suffix};
 }
+
 @mixin pad-horz($val, $important: false) {
-  padding-left: $val  #{if($important, ' !important', '')};
-  padding-right: $val #{if($important, ' !important', '')};
+  $suffix: "";
+  @if $important {
+    $suffix: " !important";
+  }
+
+  padding-left: #{$val}#{$suffix};
+  padding-right: #{$val}#{$suffix};
 }
